--- a/_config.yml
+++ b/_config.yml
@@ -14,14 +14,14 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 lang: en-US
-title: BitCubers
-email: singhshobhit2000@gmail.com
+title: DunkenMaster
+email: sanshaykatyal@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Searching for cube solutions and review. You hopped into right place.
+  An IoT enthusiast. 
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "bitcubers.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: planeingatwick
-github_username:  ajax711
+url: "sanshay.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: sanshay_k
+github_username:  sanshay
 
 # Build settings
 markdown: kramdown
